CharityPicker: Fixed input calling search before state was properly updated (lagging one letter behind). Removed some stubborn decorations

--- a/src/style/CharityPicker.less
+++ b/src/style/CharityPicker.less
@@ -127,6 +127,10 @@
 			justify-content: space-between;
 			text-align: left;
 			padding: 1em .5em .5em .5em;
+			
+			& > * { // Removes underline for login button
+				text-decoration: none;
+			}
 
 			.charity-card-name {
 				font-weight: 700;
